--- a/npilshchikova/flexbox/css/styles.css
+++ b/npilshchikova/flexbox/css/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: AvenirNext;
+    src: url(../fonts/AvenirNext-Regular.ttf);
+}
+
 body, html {
     height: 100%;
 }
@@ -35,7 +40,7 @@ img {
 }
 
 .forecast-box p {
-    font-family: "Avenir Next";
+    font-family: AvenirNext;
     font-weight: bold;
     font-size: 2.2vw;
 }
