--- a/npilshchikova/grid/css/styles.css
+++ b/npilshchikova/grid/css/styles.css
@@ -45,12 +45,14 @@ img {
     font-family: AvenirNext;
     font-weight: bold;
     font-size: 2.2vw;
+    margin: 5%;
 }
 
 .forecast-small {
     display: grid;
-    grid-template-columns: repeat(4, 25%);
+    grid-template-columns: repeat(4, 20%);
     grid-template-rows: 50% 50%;
+    justify-content: center;
     background-color: #bd3559;
     box-shadow: inset 0 0 3.0vw #91213f;
 }
@@ -67,28 +69,31 @@ img {
     justify-items: center;
 }
 
-/* .half-cell {
-    align-items: center;
+.half-cell {
+    display: grid;
     justify-items: center;
-} */
+}
 
 .inner-cell {
-    /* width: 20%; */
+    display: grid;
+    grid-template-columns: 100%;
+    justify-items: center;
 }
 
 .weather-icon {
     max-height: 100%;
     filter: drop-shadow(0 -1 3px darkgrey);
+    height: 70%;
+    margin: 15%;
 }
 
 .icon-small {
     width: 60%;
 }
-/* 
+
 .weather-icon#weather-current {
-    width: auto;
     max-height: 100%;
-} */
+}
 
 .svg {
     filter: brightness(100);
@@ -123,6 +128,11 @@ img {
     background-color: #dc3d66;
     box-shadow: inset 7px 0 1px -7px #525252;
     box-shadow: inset -7px 0 1px -7px #525252;
+    display: grid;
+    grid-template-rows: repeat(2, 50%);
+    grid-template-columns: 100%;
+    align-content: center;
+    justify-items: center;
 }
 
 #c6 {
