--- a/npilshchikova/flexbox/css/styles.css
+++ b/npilshchikova/flexbox/css/styles.css
@@ -133,3 +133,22 @@ img {
     text-shadow: 0px 4px 10px darkorchid;
     box-shadow: inset 7px 0 1px -7px #fffede;
 }
+
+@media (max-width: 700px) {
+    .forecast-box {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media (max-width: 600px) {
+    .cell {
+        width: 50%;
+    }
+}
+
+@media (max-width: 400px) {
+    .cell {
+        width: 100%;
+    }
+}
