--- a/npilshchikova/grid/css/styles.css
+++ b/npilshchikova/grid/css/styles.css
@@ -84,7 +84,6 @@ img {
     max-height: 100%;
     filter: drop-shadow(0 -1 3px darkgrey);
     height: 70%;
-    margin: 15%;
 }
 
 .icon-small {
@@ -139,4 +138,32 @@ img {
     background-color: #bd54cd;
     text-shadow: 0px 4px 10px darkorchid;
     box-shadow: inset 7px 0 1px -7px #fffede;
+}
+
+@media (max-width: 700px) {
+    .page-box {
+        grid-template-rows: 100%;
+        grid-template-columns: 100%;
+    }
+
+    .forecast-box {
+        grid-column: 1;
+        grid-row: 1;
+    }
+}
+
+@media (max-width: 600px) {
+    .forecast-box {
+        grid-template-columns: repeat(2, 50%);
+    }
+
+    #c5 {
+        grid-row: 1;
+    }
+}
+
+@media (max-width: 400px) {
+    .forecast-box {
+        grid-template-columns: 100%;
+    }
 }
