--- a/npilshchikova/flexbox/css/styles.css
+++ b/npilshchikova/flexbox/css/styles.css
@@ -42,7 +42,8 @@ img {
 .forecast-box p {
     font-family: AvenirNext;
     font-weight: bold;
-    font-size: 2.2vw;
+    font-size: 150%;
+    margin-bottom: 0;
 }
 
 .forecast-small {
@@ -51,8 +52,9 @@ img {
 }
 
 .forecast-small p {
-    font-size: 1.3vw;
+    font-size: 100%;
     text-shadow: 0px 4px 10px #aa1731;
+    margin: 5%;
 }
 
 .cell {
@@ -134,21 +136,64 @@ img {
     box-shadow: inset 7px 0 1px -7px #fffede;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 850px) {
+    .page-box {
+        align-items: stretch;
+        width: 110%;
+        left: -5%;
+    }
+
     .forecast-box {
         width: 100%;
         height: 100%;
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 650px) {
     .cell {
         width: 50%;
     }
+
+    #c5 {
+        order: -1;
+    }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 450px) {
     .cell {
         width: 100%;
+    }
+
+    #c5 {
+        order: -5 !important;
+    }
+}
+
+@media (max-height: 450px) {
+    .page-box {
+        align-items: stretch;
+        width: 110%;
+        left: -5%;
+    }
+
+    .forecast-box {
+        width: 100%;
+        height: 100%;
+    }
+
+    .cell {
+        height: 100%;
+    }
+
+    #c4 {
+        order: -3;
+    }
+
+    #c5 {
+        order: -2;
+    }
+
+    #c6 {
+        order: -1;
     }
 }
