--- a/npilshchikova/float/css/styles.css
+++ b/npilshchikova/float/css/styles.css
@@ -38,7 +38,7 @@ img {
 .forecast-box p {
     font-family: AvenirNext;
     font-weight: bold;
-    font-size: 2.2vw;
+    font-size: 150%;
 }
 
 .forecast-small {
@@ -47,7 +47,7 @@ img {
 }
 
 .forecast-small p {
-    font-size: 1.3vw;
+    font-size: 100%;
     text-shadow: 0px 4px 10px #aa1731;
 }
 
@@ -122,21 +122,50 @@ img {
 }
 
 
-@media (max-width: 700px) {
+@media (max-width: 850px) {
     .forecast-box {
         width: 100%;
         height: 100%;
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 650px) {
     .cell {
         width: 50%;
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 450px) {
     .cell {
         width: 100%;
     }
 }
+
+/* @media (max-height: 450px) {
+    .page-box {
+        align-items: stretch;
+        width: 110%;
+        left: -5%;
+    }
+
+    .forecast-box {
+        width: 100%;
+        height: 100%;
+    }
+
+    .cell {
+        height: 100%;
+    }
+
+    #c4 {
+        order: -3;
+    }
+
+    #c5 {
+        order: -2;
+    }
+
+    #c6 {
+        order: -1;
+    }
+} */
