--- a/npilshchikova/float/css/styles.css
+++ b/npilshchikova/float/css/styles.css
@@ -23,13 +23,17 @@ img {
 .page-box {
     position: absolute;
     top: 0%;
+    width: 100%;
     height: 100%;
-    align-content: center;
+    margin: auto;
+    padding-left: 3%;
 }
 
 .forecast-box {
-    position: relative;
-    width: 90%;
+    margin: auto;
+    padding: 8% 0;
+    overflow: auto;
+    width: 80%;
     height: 70%;
     color: white;
     filter: drop-shadow(0 0 4.0vw black);
@@ -39,22 +43,34 @@ img {
     font-family: AvenirNext;
     font-weight: bold;
     font-size: 150%;
+    margin-bottom: 0;
+    margin-top: 5%;
 }
 
 .forecast-small {
     background-color: #bd3559;
     box-shadow: inset 0 0 3.0vw #91213f;
+    overflow: auto;
 }
 
 .forecast-small p {
     font-size: 100%;
     text-shadow: 0px 4px 10px #aa1731;
+    margin: 5%;
 }
 
 .cell {
     width: 30%;
     height: 50%;
     float: left;
+    text-align: center;
+}
+
+.inner-box {
+    margin: auto;
+    width: 80%;
+    padding-top: 3%;
+    overflow: auto;
 }
 
 .half-cell {
@@ -62,13 +78,14 @@ img {
 }
 
 .inner-cell {
-    width: 20%;
+    width: 25%;
     float: left;
 }
 
 .weather-icon {
     max-height: 50%;
     filter: drop-shadow(0 -1 3px darkgrey);
+    padding-top: 10%;
 }
 
 .icon-small {
@@ -78,10 +95,14 @@ img {
 .weather-icon#weather-current {
     width: auto;
     max-height: 75%;
+    padding-top: 4%;
 }
 
 .svg {
     filter: brightness(100);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #c1 {
@@ -123,13 +144,24 @@ img {
 
 
 @media (max-width: 850px) {
+    .page-box {
+        margin: 0;
+        padding-left: 0;
+    }
+
     .forecast-box {
-        width: 100%;
         height: 100%;
+        margin: 0;
+        padding: 0;
+        width: 110%;
     }
 }
 
 @media (max-width: 650px) {
+    .forecast-box {
+        width: 100% !important;
+    }
+
     .cell {
         width: 50%;
     }
@@ -141,31 +173,26 @@ img {
     }
 }
 
-/* @media (max-height: 450px) {
+@media (max-height: 530px) {
     .page-box {
-        align-items: stretch;
-        width: 110%;
-        left: -5%;
+        margin: 0;
+        padding-left: 0;
     }
 
     .forecast-box {
-        width: 100%;
         height: 100%;
+        margin: 0;
+        padding: 0;
+        width: 110%;
     }
+}
 
+@media (max-height: 415px) {
     .cell {
         height: 100%;
     }
 
-    #c4 {
-        order: -3;
+    .forecast-box {
+        width: 110%;
     }
-
-    #c5 {
-        order: -2;
-    }
-
-    #c6 {
-        order: -1;
-    }
-} */
+}
