--- a/npilshchikova/grid/css/styles.css
+++ b/npilshchikova/grid/css/styles.css
@@ -45,7 +45,7 @@ img {
     font-family: AvenirNext;
     font-weight: bold;
     font-size: 150%;
-    margin: 5%;
+    margin-bottom: 0;
 }
 
 .forecast-small {
@@ -60,6 +60,7 @@ img {
 .forecast-small p {
     font-size: 100%;
     text-shadow: 0px 4px 10px #aa1731;
+    margin: 5%;
 }
 
 .cell {
@@ -67,6 +68,7 @@ img {
     grid-template-columns: 100%;
     align-content: center;
     justify-items: center;
+    /* text-align: center; */
 }
 
 .half-cell {
@@ -96,6 +98,9 @@ img {
 
 .svg {
     filter: brightness(100);
+    /* display: block;
+    margin-left: auto;
+    margin-right: auto; */
 }
 
 #c1 {
