--- a/Yuriy_Lysov/layout_with_flexbox/css/main.css
+++ b/Yuriy_Lysov/layout_with_flexbox/css/main.css
@@ -9,13 +9,17 @@ body {
   margin: 0; }
 
 .background {
-  background-image: url("../img/background.jpg");
-  filter: brightness(0.8) blur(10px);
+  background: url("../img/background.jpg") no-repeat center center fixed;
   width: 100%;
   height: 100%;
   position: fixed;
   margin: 0;
-  z-index: -999; }
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;  
+  z-index: -999;
+}
 
 .container {
   width: 100vw;
