--- a/Yuriy_Lysov/layout_with_float/css/main.css
+++ b/Yuriy_Lysov/layout_with_float/css/main.css
@@ -9,18 +9,24 @@ body {
   margin: 0; }
 
 .background {
-  background-image: url("../img/background.jpg");
-  filter: brightness(0.8) blur(10px);
+  background: url("../img/background.jpg") no-repeat center center fixed;
   width: 100%;
   height: 100%;
   position: fixed;
-  margin: 0; }
+  margin: 0;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 
 .container {
   width: 615px;
   margin: 0 auto;
   top: 50%;
-  transform: translateY(45%); }
+  transform: translateY(45%);
+}
 
 .block {
   float: left;
