--- a/Yuriy_Lysov/layout_with_grid/css/main.css
+++ b/Yuriy_Lysov/layout_with_grid/css/main.css
@@ -11,12 +11,15 @@ body {
 
 /* Background */
 .background {
-  background-image: url("../img/background.jpg");
-  filter: brightness(0.8) blur(10px);
+  background: url("../img/background.jpg") no-repeat center center fixed;
   width: 100%;
   height: 100%;
   position: fixed;
   margin: 0;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   z-index: -999; }
 
 /* Container */
@@ -32,6 +35,7 @@ body {
 /* Grid styles */
 .grid {
   display: grid;
+  display: -ms-grid;
   grid-template-columns: repeat(3, minmax(100px, 205px));
   grid-auto-rows: minmax(100px, 205px);
   align-self: center;
