--- a/Yuriy_Lysov/layout_with_grid/css/main.scss
+++ b/Yuriy_Lysov/layout_with_grid/css/main.scss
@@ -16,12 +16,15 @@ body {
 
 /* Background */
 .background {
-  background-image: url("../img/background.jpg");
-  filter: brightness(0.8) blur(10px);
+  background: url("../img/background.jpg") no-repeat center center fixed;
   width: 100%;
   height: 100%;
   position: fixed;
   margin: 0;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   z-index: -999; 
 }
 
@@ -40,6 +43,8 @@ body {
 /* Grid styles */
 .grid {
   display: grid;
+  display: -ms-grid;
+  
   grid-template-columns: repeat(3, minmax(100px, 205px));
   grid-auto-rows: minmax(100px, 205px);
   align-self: center;
@@ -47,6 +52,7 @@ body {
   text-align: center;
   align-content: center;
   justify-content: center;
+  
   img {
     margin: auto;
   }
