--- a/Varvara Belitskaia/float/style_float.css
+++ b/Varvara Belitskaia/float/style_float.css
@@ -1,3 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
 html {
     font-size: 14px; 
 }
@@ -5,8 +14,7 @@ html {
 body {
     background-color: #4e5860;
     background-image: radial-gradient(at top, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 50%);
-    background-repeat: no-repeat;
-    
+    background-repeat: no-repeat;   
 }
 
 .widget {
@@ -44,11 +52,6 @@ body {
     width: 100%;
     height: 18.5%;
     float: left;
-}
-
-p { 
-    margin-top: 0px;
-    margin-bottom: 0px;
 }
 
 .temperature {
@@ -111,16 +114,16 @@ p {
     margin-right: 0;
 }
 
-.date p {
+.month, .day {
     font-family: open-sans, sans-serif;
     font-weight: 700;
     font-style: normal;
     color: white;
     text-align: center;
+    font-size: 1em; 
 }
 
 .month {
-    font-size: 1em; 
     margin-top: 21%;
 }
 
@@ -181,9 +184,10 @@ footer {
     width: 100%;
     bottom: 11.8%;
     text-align: center;
+    font-size: 0;
  }
 
- .scroller img {
+.scroller img {
     margin: 4px;  
     vertical-align: middle;  
 }  
