--- a/Anastasia Sokolova/flex/style.css
+++ b/Anastasia Sokolova/flex/style.css
@@ -79,7 +79,11 @@ text-align: center
     line-height: 1;
     color: aliceblue;
 }
-    
+
+.text_data > span {
+    font-size: 1.5em;
+}    
+
 .rect_btm {  
     background: #2e3335;
     box-shadow: 0px 7px 14px 5px rgb(41, 46, 48);
