--- a/Varvara Belitskaia/float/style_float.css
+++ b/Varvara Belitskaia/float/style_float.css
@@ -18,7 +18,8 @@ body {
 }
 
 .widget {
-    width: 389px; 
+    width: 20%;
+    min-width: 389px; 
     height: 464px;
     background-color: #f1f8f9;
     border-radius: 10px 10px 15px 15px;
@@ -43,7 +44,7 @@ body {
 }
 
 .refresh-icon {
-    margin-top: 16px;
+    margin: 16px 0 0;
     float: right;
     width: 9.5%;
 }
@@ -66,7 +67,7 @@ body {
     font-style: normal;
     font-size: 4.11rem;
     color: #8d9396;
-    margin-left: 18%;
+    margin: 0 0 0 18%;
     float: left;
 }
 
@@ -92,7 +93,7 @@ body {
     font-style: normal;
     font-size: 1.71rem;
     color: #bac2c6;
-    margin-top: 7px;
+    margin: 7px 0 0;
     float: left;
 }
 
@@ -110,11 +111,11 @@ body {
     width: 16.8%;
     height: 80.23%; 
     background-color: #54bae6;
-    margin-top: 0;
-    margin-right: 0;
+    margin: 0;
 }
 
-.month, .day {
+.month, 
+.day {
     font-family: open-sans, sans-serif;
     font-weight: 700;
     font-style: normal;
@@ -124,7 +125,7 @@ body {
 }
 
 .month {
-    margin-top: 21%;
+    margin: 20% 0 0;
 }
 
 .day {
@@ -151,14 +152,14 @@ footer {
     top: 33.8%;
 }
 
-.stats img { 
-    margin-right: 16px;  
+.stats-img { 
+    margin: 0 16px 0 0;  
     float: left;
 }
 
-.stats p {
+.stats-text {
     float: left;
-    /* выравнивание иконки и текста */
+        /* выравнивание иконки и текста */
         line-height: 1.5;
         display: inline-block;
         vertical-align: middle; 
@@ -171,74 +172,84 @@ footer {
 
 .humidity {
     position: absolute;
-    left: 43.4%; 
+    left: 45.6%; 
 }
 
 .sun {
     position: absolute;
-    left: 69.4%; 
+    left: 72%; 
 }
 
 .scroller {
     position: absolute;
     width: 100%;
-    bottom: 11.8%;
+    bottom: 11%;
     text-align: center;
     font-size: 0;
  }
 
-.scroller img {
+.scroller-img {
     margin: 4px;  
     vertical-align: middle;  
 }  
 
-/* Смартфоны - виджет 90% ширины экрана, нет футера, шрифты более мелкие */
 @media (max-width: 480px), only screen and (-webkit-min-device-pixel-ratio: 2) and (max-width: 480px) {
 
     html {
-        font-size: 12px;
+        font-size: 10px;
     }
-    
+
     .widget {
-        width: 90%;
         min-width: 300px; 
         height: 328px;
         border-radius: 10px;
     }
 
     .weather-image-container {
-        height: 73.3%;
+        height: 80%;
+    }
+
+    .refresh-icon {
+        width: 12%;
+    }
+
+    .temperature-value::after {
+        margin: 0;
     }
 
     .current {
-        height: 26.7%;
+        height: 20%;
     }
 
-    .date {
-        height: 65%;
-    }
-
-    footer{
+    footer {
         display: none;
-     }
+    }
 
 }
 
-/* Планшеты и мониторы с ретиной - шрифты более крупные, иконка с погодой более крупная */
 @media only screen and (min-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) {  
   
     html {
-        font-size: 15px;
+        font-size: 16px;
     }
 
-    .widget {      
-        min-width: 420px;
-        height: 540px;
-    }
-
-    .weather-icon {
+    img {
         transform: scale(1.2);
         -ms-transform: scale(1.2);
     }
 
-}   
+    .widget {      
+        width: 20%;
+        min-width: 506px;
+        height: 603px;
+    }
+
+    .refresh-icon {
+        margin: 24px 0 0;
+    }
+    
+    .scroller-img {
+        margin: 5px;   
+    } 
+
+} 
