--- a/Varvara Belitskaia/grid/style_grid.css
+++ b/Varvara Belitskaia/grid/style_grid.css
@@ -15,74 +15,66 @@ body {
     background-color: #4e5860;
     background-image: radial-gradient(at top, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 50%);
     background-repeat: no-repeat;
-    display: -ms-grid;
-    display: grid;
-    justify-content: center;
-    align-items: center;       
 }
 
 .widget {
-    margin-top: 50px;
-    display: -ms-grid;
-    display: grid;
-    justify-content: center;
-    justify-items: stretch;
-    box-sizing: border-box;
-    min-width: 389px; 
-    height: 464px;
-    grid-template-rows: 52% 18.5% 29.5%;
-    -ms-grid-rows: 52% 18.5% 29.5%;
     background-color: #f1f8f9;
     border-radius: 10px 10px 15px 15px;
     box-shadow: 0px 21px 20.16px 0.84px rgba(0, 0, 0, 0.15);
+    margin: 50px auto 0; 
+    width: 20%;
+    min-width: 389px;
+    height: 464px;
+    display: -ms-grid;
+    display: grid;
+    grid-template-rows: 52% 18.5% 29.5%;
+    -ms-grid-rows: 52% 18.5% 29.5%;
+    -ms-grid-columns: 1fr;
 }
 
 .weather-image-container {
-    width: 100%;
     display: -ms-grid;
     display: grid;
     -ms-grid-row: 1;
-    justify-items: center;
+    -ms-grid-column: 1;
     grid-template-columns: 9.5% 81% 9.5%;
     -ms-grid-columns: 9.5% 81% 9.5%;
-    justify-content: space-between; 
+    -ms-grid-rows: 1fr;
 }
 
 .empty-container {
-    -ms-grid-column: 1;
+    -ms-grid-row: 1; 
+    -ms-grid-column: 1; 
 }
 
 .weather-icon {
-    align-self: center;
-    -ms-grid-row-align: center;
+    place-self: center;
+    -ms-grid-row: 1;
+    -ms-grid-column: 2; 
     -ms-grid-column-align: center; 
-    -ms-grid-column: 2;
+    -ms-grid-row-align: center; 
 }
 
 .refresh-icon {
-    margin-top: 16px;
+    margin: 16px 0 0;
+    -ms-grid-row: 1; 
     -ms-grid-column: 3;
-    justify-self: start;
-    -ms-grid-column-align: start;
 }
 
-.current {    
-    width: 100%;
+.current {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
     display: -ms-grid;
     display: grid;
-    -ms-grid-row: 2;
     grid-template-columns: 29.5% 53.7% 16.8%;
     -ms-grid-columns: 29.5% 53.7% 16.8%;
-    justify-content: stretch;
+    -ms-grid-rows: 1fr;
 }
 
 .temperature {
-    display: -ms-grid;
-    display: grid;
+    -ms-grid-row: 1;
     -ms-grid-column: 1;
-    grid-template-columns: 75% 25%;
-    -ms-grid-columns: 75% 25%;
-    justify-items: start;
+    position: relative;
 }
 
 .temperature-value {
@@ -91,29 +83,25 @@ body {
     font-style: normal;
     font-size: 4.11rem;
     color: #8d9396;
-    margin-left: 25%; 
-    -ms-grid-column: 1;
-    position: relative;
+    margin: 0 0 0 18%; 
 }
 
 .temperature-value::after {
-    content: 'O';
+    content: ' O';
     font-family: proxima-nova, sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 1.2rem;
+    color: #8d9396;
     position: absolute;
-    top: 14%;
+    top: 15%; 
 }
 
 .middle-column {
-    height: 100%;
-    display: -ms-grid;
-    display: grid;
+    -ms-grid-row: 1;
     -ms-grid-column: 2;
     grid-template-rows: 47.7% 52.3%;
     -ms-grid-rows: 47.7% 52.3%;
-    justify-items: start;
 }
 
 .weather-text {
@@ -122,7 +110,7 @@ body {
     font-style: normal;
     font-size: 1.71rem;
     color: #bac2c6;
-    margin-top: 7px;
+    margin: 7px 0 0;
     -ms-grid-row: 1;
 }
 
@@ -136,24 +124,28 @@ body {
 }
 
 .date {
+    -ms-grid-row: 1;
+    -ms-grid-column: 3;
     display: -ms-grid;
     display: grid;
-    -ms-grid-column: 3;
-    grid-template-rows: 50% 50%;
-    -ms-grid-rows: 50% 50%;
-    justify-items: center;
+    grid-template-rows: 46% 54%;
+    -ms-grid-rows: 46% 54%;
+    -ms-grid-columns: 1fr;
     height: 80.23%; 
     background-color: #54bae6;
-    margin-top: 0;
-    margin-right: 0;
+    margin: 0;
 }
 
-.month, .day {
+.month, 
+.day {
     font-family: open-sans, sans-serif;
     font-weight: 700;
     font-style: normal;
     color: white;
-    font-size: 1em; 
+    font-size: 1em;
+    justify-self: center;
+    -ms-grid-column-align: center; 
+    -ms-grid-column: 1;
 }
 
 .month {
@@ -168,139 +160,170 @@ body {
     font-size: 1.28rem;
     -ms-grid-row: 2;
 }
- 
+
 footer {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
     background-color: #2e3335;
-    width: 100%;
     border-radius: 0 0 10px 10px;
     display: -ms-grid;
     display: grid;
-    -ms-grid-row: 3;
-    grid-template-rows: 55% 45%;
-    -ms-grid-rows: 55% 45%;
-    justify-items: center;
-    align-items: end;
+    grid-template-rows: 48.5% 51.5%;
+    -ms-grid-rows: 50% 50%;
+    -ms-grid-columns: 1fr;
 }
 
 .stats {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
     display: -ms-grid;
     display: grid;
-    -ms-grid-row: 1;
-    grid-template-columns: 1fr 1fr 1fr;
-    -ms-grid-columns: 1fr 1fr 1fr;
-    -ms-grid-row-align: end;
-    justify-content: stretch;
-    align-items: center;
+    grid-template-columns: auto 1fr auto;
+    -ms-grid-columns: auto 1fr auto;
+    -ms-grid-rows: 1fr;
     font-family: proxima-nova, sans-serif;
     font-weight: 700;
     font-style: normal;
     font-size: 1em;
     color: white;
+    -ms-grid-row-align: end;
+    align-self: end;
 }
 
-.stats img {   
-    margin-right: 16px;  
+.stats-img {   
+    margin: 0 16px 0 0;  
     justify-self: end;
+    align-self: center;
     -ms-grid-column-align: end;
+    -ms-grid-row-align: center;
     -ms-grid-column: 1;  
 }
 
-.stats p {
+.stats-text {
     -ms-grid-column: 2;
+    -ms-grid-row-align: center;
+    align-self: center; 
 }
 
 .wind {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
     display: -ms-grid;
     display: grid;
-    -ms-grid-column: 1;
-    grid-template-columns: 1fr 1fr;
-    -ms-grid-columns: 1fr 1fr;
-    align-items: center;
-    margin-left: 45px;
+    grid-template-columns: 1fr auto;
+    -ms-grid-columns: 1fr auto;
+    margin: 0 0 0 45px;
 }
 
 .humidity {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
     display: -ms-grid;
     display: grid;
-    -ms-grid-column: 2;
-    grid-template-columns: 1fr 1fr;
-    -ms-grid-columns: 1fr 1fr;
-    align-items: center;
+    grid-template-columns: 1fr auto;
+    -ms-grid-columns: 1fr auto;
+    justify-self: center; 
+    -ms-grid-column-align: center;
 }
 
-.sun {
+.sun{
+    -ms-grid-row: 1;
+    -ms-grid-column: 3;
     display: -ms-grid;
     display: grid;
-    -ms-grid-column: 3;
-    grid-template-columns: 1fr 1fr;  
-    -ms-grid-columns: 1fr 1fr;
-    align-items: center;
-    margin-right: 45px;
+    grid-template-columns: 1fr auto;
+    -ms-grid-columns: 1fr auto;
+    margin: 0 45px 0 0;
 }
 
 .scroller {
-    display: -ms-grid;
-    display: grid;
     -ms-grid-row: 2;
-    grid-template-columns: 1fr 1fr 1fr;
-    -ms-grid-columns: 1fr 1fr;
-    -ms-grid-row-align: end;
+    -ms-grid-column: 1;
+    justify-self: center;
     -ms-grid-column-align: center;
-    align-items: center;
-    margin-bottom: 15px;
     font-size: 0;
+    align-self: end;
+    -ms-grid-row-align: end;
+    margin: 0 0 15px;
 }
 
-.scroller img {
+.scroller-img {
     margin: 4px;   
-}  
+    vertical-align: middle;
+} 
 
-/* Смартфоны - виджет по ширине как экран, нет футера, шрифты более мелкие */
 @media (max-width: 480px), only screen and (-webkit-min-device-pixel-ratio: 2) and (max-width: 480px) {
 
     html {
-        font-size: 12px;
+        font-size: 10px;
     }
 
-    body {
-        justify-content: stretch;
-        align-items: stretch;  
-        padding: 10px; 
-    }
-    
     .widget {
-        justify-content: stretch;
         min-width: 300px; 
         height: 328px;
-        grid-template-rows: 73.3% 26.7%;
-        -ms-grid-rows: 73.3% 26.7%;
+        grid-template-rows: 80% 20%;
+        -ms-grid-rows: 80% 20%;
         border-radius: 10px;
     }
 
-    .temperature-value::after {
-        top: 10%;
+    .weather-image-container {
+        grid-template-columns: 12% 76% 12%;
+        -ms-grid-columns: 12% 76% 12%;
     }
 
-    footer{
+    .temperature-value::after {
+        top: 12%;
+    }
+
+    footer {
         display: none;
-     }
+    }
 
 }
 
-/* Планшеты и мониторы с ретиной - шрифты более крупные, иконка с погодой более крупная */
 @media only screen and (min-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) {  
   
     html {
-        font-size: 18px;
+        font-size: 16px;
+    }
+
+    img {
+        transform: scale(1.2);
+        -ms-transform: scale(1.2);
     }
 
     .widget {      
-        height: 580px;
+        width: 20%;
+        min-width: 506px;
+        height: 603px;
     }
 
-    .weather-icon {
-        transform: scale(1.3);
-        -ms-transform: scale(1.3);
+    .refresh-icon {
+        margin: 24px 0 0;
     }
 
-}  
+    .temperature-value::after {
+        top: 12%;
+    }
+
+    .stats-img {   
+        margin: 0 21px 0 0;        
+    }
+    
+    .wind {
+        margin: 0 0 0 60px;
+    }
+    
+    .sun{
+        margin: 0 60px 0 0;
+    }
+    
+    .scroller {
+        margin: 0 0 21px;
+    }
+    
+    .scroller-img {
+        margin: 5px;   
+    } 
+
+} 
