--- a/Natalya Kuznetsova/flex/style.css
+++ b/Natalya Kuznetsova/flex/style.css
@@ -53,7 +53,7 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
   background-color: #f1f8f9;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -72,10 +72,6 @@ html {
   width: 100%;
 }
 
-.weather_info ul li {
-  padding: 15px 20px;
-}
-
 .weather_info ul li:first-child {
   padding-left: 20px;
   padding-right: 0;
@@ -90,6 +86,10 @@ html {
   flex-basis: 50%;
   padding-left: 0;
   white-space: nowrap;
+}
+
+.weather_info ul li:last-child {
+  padding: 15px 20px;
 }
 
 .weather_info ul li span {
