--- a/Natalya Kuznetsova/float/widget.scss
+++ b/Natalya Kuznetsova/float/widget.scss
@@ -21,7 +21,7 @@
     }
 
     position: relative;
-    padding-bottom: 10px;
+    padding-bottom: 5%;
     background-color: #f1f8f9;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -37,7 +37,7 @@
 
     &__list {
       display: block;
-      padding-top: 55%;
+      padding-top: 60%;
 
       &__list_item {
         display: inline-block;
@@ -119,6 +119,7 @@
         float: left;
         width: 33.333%;
         text-align: center;
+        vertical-align: middle;
 
         &:last-child {
           padding-right: 0;
