--- a/Ruslan Gaiazov/cssgrid/style.css
+++ b/Ruslan Gaiazov/cssgrid/style.css
@@ -1,18 +1,12 @@
 @font-face {
 	font-family: "AvenirNext Bold";
-	src: url('fonts/AvenirNext-Bold.ttf');
-}
-
-.weather-big-section > img {
-	display: grid;
-	padding-left: 15px;
+	src: url('fonts/avenir-next-bold.woff');
 }
 
 main {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(200px, 0fr));
 	background-color: #efefef;
-
 	background-image: url(img/background.png);
 	background-size: auto 100%;
 	max-width: 799px;
@@ -20,7 +14,6 @@ main {
 	margin: auto;
 	align-content: center;
 	justify-content: center;
-	
 }
 
 .weather-big-section {
@@ -37,48 +30,44 @@ main {
 	border: 1px outset rgba(0, 0, 0, 0.17); 
 }
 
-main .weather-big-section:nth-child(2) {
+.section-one {
+	background-color: #06B3DB;
+}
+.section-two {
 	background-color: #4ed486;
 }
-main .weather-big-section:nth-child(3) {
+.section-three {
 	background-color: #6139f6;
 }
-main .weather-big-section:nth-child(4) {
+.section-four {
 	background-color: #e3b63d;
 }
-main .weather-big-section:nth-child(5) {
-	justify-content: space-between;
+.section-five {
 	background-color: #dc3d66;
 }
-main .weather-big-section:nth-child(6) {	
+.section-six {
 	background-color: #bd54cd;
 }
 
-#weather-of-the-week {
+.weather-big-icon {
+	display: grid;
+	margin: auto;
+}
+
+.weather-of-the-week {
 	width: 100%;	
 	height: 100px;	
 	background-color: #bd3559;
 	grid-template-columns: 50px 50px 50px 50px;
 	display: grid;	
-	padding-top: 10px;
 }
 
-#weather-icon{
-	padding-top: 24px;
-	padding-left: 70px;
+.detail{
+	margin: 24px auto 10px auto;
 }
 
-#weather-icon-cloudy {
-	padding-left: 25px;
-}
-
-#weather-icon-css {
-	padding-left: 25px;
-}
-
-.days-of-the-week {
+.weather-on-the-week {
 	display: grid;
-	
 	justify-content: space-evenly;
 	align-items: center;
 	text-align: center;
