--- a/Alexey Shevchenko/float/style.css
+++ b/Alexey Shevchenko/float/style.css
@@ -20,10 +20,6 @@ body {
     height: 100%;
 }
 
-.wrapper div {
-    border: 1px solid white;
-}
-
 .weather-widget {
     background-image: url("img/Paris.png");
     background-repeat: no-repeat;
@@ -75,15 +71,14 @@ body {
     /* --- Header --- */
     .main-section {
         margin: 15vh 10vw 0 0;
-        display: block;
         float: right;
         clear: right;
     }
 
     .main-section-date {
         display: inline-block;
-        vertical-align: top;
         margin-right: 25px;
+        vertical-align: top;
         clear: left;
         float: left;
     }
@@ -113,7 +108,6 @@ body {
 
     .main-section-weather > span:first-child > strong:first-child {
         font-size: 11.57em;
-        /*line-height: 170px;*/
         margin-right: 25px;
         float: left;
     }
@@ -132,7 +126,6 @@ body {
 
     .main-section-weather > span:last-child {
         display: block;
-        /*line-height: 60px;*/
         margin-left: 10px;
     }
 
@@ -148,7 +141,6 @@ body {
 
     .main-section-weather > span:last-child > strong:last-child {
         font-size: 1.622em;
-        /*line-height: 100px;*/
     }
 
     /* --- Footer --- */
@@ -160,9 +152,6 @@ body {
         bottom: -70px;
         width: 83%;
         height: 25%;
-        /*margin:0;*/
-        /*left:50%;*/
-        /*transform: translateX(-50%);*/
     }
 
     .weekly-section > img {
@@ -174,37 +163,34 @@ body {
     }
 
     .weekly-section > ul {
-        min-height:108px;
+        min-height: 108px;
         position: relative;
-        /*top:50%;*/
-        /*transform: translate(-50%,-50%);*/
         transform: translateX(-50%);
         left: 50%;
-        display: block;
         float: left;
         margin: 0;
-        padding: 0 10vw;
+        padding: 0;
         height: 100%;
         font-size: 30.88px;
     }
 
     .weekly-section > ul > li {
         position: relative;
-        top:50%;
+        top: 50%;
         transform: translateY(-50%);
-        margin: 0 2.5vw;
-        /*margin: 2vh 0;*/
-        display: block;
+        margin: 0 4.5vw;
         float: left;
         text-align: center;
+        line-height: 6vh;
     }
 
     .weekly-section > ul > li > div {
-        height: 40px;
+        height: 9vh;
     }
 
-    .weekly-section > ul > li > div > object{
-        width: 60px;
+    .weekly-section > ul > li > div > object {
+        width: 7vw;
+        height: 100%;
     }
 
     .weekly-section > ul > li > span > sup {
@@ -212,7 +198,7 @@ body {
     }
 
     .divider {
-        top:50%;
+        top: 50%;
         transform: translateY(-50%);
         position: relative;
         height: 80%;
@@ -355,7 +341,6 @@ body {
 /* ----------- Phones and small tablets ----------- */
 @media (max-width: 767px) {
     .wrapper {
-        display: grid;
         height: 100%;
     }
 
@@ -364,25 +349,25 @@ body {
         background-size: cover;
         width: 100%;
         height: 100%;
-        display: grid;
-        grid-template: 3fr 1fr / 1fr;
-        grid-template-areas: "main" "weekly";
     }
 
     /* --- Header --- */
     .main-section {
         margin: 15vh 10vw 0 0;
-        display: grid;
-        grid-auto-flow: column;
-        align-items: start;
-        align-self: start;
-        justify-self: end;
-        grid-area: main;
+        float: right;
+        clear: right;
     }
 
     .main-section-date {
+        display: inline-block;
         margin-right: 15px;
-        display: grid;
+        vertical-align: top;
+        clear: left;
+        float: left;
+    }
+
+    .main-section-date > span {
+        display: block;
     }
 
     .main-section-date > span:first-child {
@@ -394,32 +379,36 @@ body {
     }
 
     .main-section-weather {
-        display: grid;
-        grid-auto-flow: row;
+        display: inline-block;
+        clear: right;
+        float: right;
     }
 
     .main-section-weather > span:first-child {
-        display: grid;
-        grid-auto-flow: column;
+        display: block;
+        line-height: 90px;
     }
 
     .main-section-weather > span:first-child > strong:first-child {
         font-size: 5.785em;
-        line-height: 90px;
         margin-right: 15px;
+        float: left;
     }
 
     .main-section-weather > span:first-child > strong:last-child {
         font-size: 2.8925em;
+        vertical-align: top;
         line-height: 25px;
     }
 
     .main-section-weather > span:nth-child(2) {
+        display: block;
         margin: 0 0 15px 10px;
         font-size: 1.44625em;
     }
 
     .main-section-weather > span:last-child {
+        display: block;
         margin-left: 10px;
     }
 
@@ -439,34 +428,51 @@ body {
 
     /* --- Footer --- */
     .weekly-section {
-        padding: 0 8%;
-        display: grid;
-        grid-area: weekly;
-        grid-auto-flow: column;
-        grid-template-columns: auto 1fr auto;
-        align-items: center;
+        padding: 0 4%;
+        display: block;
+        clear: both;
+        position: absolute;
+        bottom: 0;
+        width: 92%;
+        height: 25%;
+    }
+
+    .weekly-section > img {
+        float: left;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
     }
 
     .weekly-section > ul {
-        display: grid;
+        min-height: 108px;
+        position: relative;
+        transform: translateX(-49%);
+        left: 45%;
+        float: left;
         margin: 0;
-        grid-auto-flow: column;
-        font-size: 15.44px;
-        padding: 0 5vw;
+        padding: 0;
         height: 100%;
-        justify-items: center;
+        font-size: 15.44px;
     }
 
     .weekly-section > ul > li {
-        margin: 2vh 0;
-        display: grid;
-        justify-items: center;
-        align-content: space-between;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+        margin: 0 0.5vw;
+        float: left;
         text-align: center;
+        line-height: 6vh;
     }
 
-    .weekly-section > ul > li > object {
-        width: 40px;
+    .weekly-section > ul > li > div {
+        height: 9vh;
+    }
+
+    .weekly-section > ul > li > div > object {
+        width: 7vw;
+        height: 100%;
     }
 
     .weekly-section > ul > li > span > sup {
@@ -474,7 +480,15 @@ body {
     }
 
     .divider {
+        top: 50%;
+        transform: translateY(-50%);
+        position: relative;
         height: 80%;
-        align-self: center;
+        float: left;
+    }
+
+    .weekly-section > .next {
+        transform: translateY(-50%) rotate(180deg);
+        float: right;
     }
 }
